--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  font-family: 'Carrois Gothic SC', sans-serif;
+  letter-spacing: .21rem;
+  top: 0px;
+  height: 9000px;
 }
 
 .App-logo {
