--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -10,9 +10,7 @@ img {
 }
 @media screen and (max-width: 1300px) {
   #links {
-    animation-name: slidehide;
-    animation-duration: 1s;
-   animation-fill-mode: forwards;
+    transform: translate(-300px);
     
   }
 }
@@ -20,6 +18,7 @@ img {
 #links {
   position: relative;
   top: -300px;
+  transition: 0.5s;
 }
 .circleLink {
   width: 130px;
@@ -32,6 +31,7 @@ img {
 }
 .circleLink:hover {
   box-shadow: 10px 10px 10px;
+  cursor: pointer;
 }
 
 #github {
