--- a/client/src/styles/skills.css
+++ b/client/src/styles/skills.css
@@ -50,3 +50,8 @@
   justify-content: space-around;
   align-items: center;
 }
+#skillstext  p {
+  max-width: 500px;
+  text-align: left;
+  margin-left: 20px;
+}
