--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -24,13 +24,13 @@ img {
   width: 130px;
   height: 130px;
   border-radius: 70px;
-  box-shadow: 2px 2px 2px;
+  box-shadow: 2px 2px 2px rgb(80, 80, 80);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .circleLink:hover {
-  box-shadow: 10px 10px 10px;
+  box-shadow: 10px 10px 10px rgb(92, 92, 92);
   cursor: pointer;
 }
 
