--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -11,6 +11,7 @@ nav {
   z-index: 3;
   font-size: 20px;
 }
+
 #logocontainer img {
   height: 45px;
   width: 51px;
@@ -36,6 +37,8 @@ nav {
 }
 nav a {
   margin: 10px;
+  text-decoration: none;
+  color: #9c9c9c;
 }
 ul {
   display: flex;
@@ -46,7 +49,7 @@ li {
   list-style: none;
   color: #9c9c9c;
 }
-li:hover {
+nav a:hover {
   color: white;
   cursor: pointer;
 }
