--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -40,10 +40,10 @@ nav a {
   text-decoration: none;
   color: #9c9c9c;
 }
-ul {
+nav ul {
   display: flex;
   justify-content: center;
-  padding: 0;
+ padding-left: 150px;
 }
 li {
   list-style: none;
@@ -58,7 +58,7 @@ nav .navs:hover {
   width: 200px;
   background-color: #243223;
   color: white;
-  margin-right: 20px;
+  margin-right: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,3 +70,4 @@ nav .navs:hover {
     cursor: pointer;
 
 }
+
